# SurfaceViewManual

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/am/surfaceview_manual/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EGLManager.cpp  EGLManager.h  Example_Texture.cpp  Example_Texture.h  GLRenderer.cpp  GLRenderer.h  IcebergRender.cpp  IcebergRender.h  native-lib.cpp
app/src/main/java/com/am/surfaceview_manual/: EGLHelper.java  MainActivity.java  MySurfaceView.java  RenderingThread.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/am/surfaceview_manual/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
